--- a/TaskManager/package.json
+++ b/TaskManager/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.1.0",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "daisyui": "^2.51.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
