--- a/TaskManager/package.json
+++ b/TaskManager/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
+    "react-multi-date-picker": "^4.0.0",
     "react-router-dom": "^6.11.1",
     "yup": "^1.1.1"
   },
