--- a/TaskManager/package.json
+++ b/TaskManager/package.json
@@ -14,11 +14,13 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "daisyui": "^2.51.6",
+    "emoji-picker-react": "^4.4.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.1",
+    "tailwind-scrollbar": "^3.0.4",
     "yup": "^1.1.1"
   },
   "devDependencies": {
