--- a/TaskManager/package.json
+++ b/TaskManager/package.json
@@ -13,7 +13,7 @@
     "@fullcalendar/core": "^6.1.7",
     "@fullcalendar/daygrid": "^6.1.7",
     "@fullcalendar/interaction": "^6.1.7",
-    "@fullcalendar/moment-timezone": "^6.1.7",
+    "@fullcalendar/list": "^6.1.8",
     "@fullcalendar/react": "^6.1.7",
     "@fullcalendar/timegrid": "^6.1.7",
     "@hookform/resolvers": "^3.1.0",
@@ -27,6 +27,7 @@
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-multi-date-picker": "^4.0.0",
+    "react-redux": "^8.0.7",
     "react-router-dom": "^6.11.1",
     "tailwind-scrollbar": "^3.0.4",
     "yup": "^1.1.1"
