--- a/TaskManager/package.json
+++ b/TaskManager/package.json
@@ -30,6 +30,7 @@
     "react-multi-date-picker": "^4.0.0",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.11.1",
+    "react-toastify": "^9.1.3",
     "tailwind-scrollbar": "^3.0.4",
     "yup": "^1.1.1"
   },
