--- a/TaskManager/package.json
+++ b/TaskManager/package.json
@@ -10,9 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@dnd-kit/core": "^6.0.8",
-    "@dnd-kit/sortable": "^7.0.2",
-    "@dnd-kit/utilities": "^3.2.1",
     "@fullcalendar/core": "^6.1.7",
     "@fullcalendar/daygrid": "^6.1.7",
     "@fullcalendar/interaction": "^6.1.7",
@@ -21,10 +18,12 @@
     "@fullcalendar/timegrid": "^6.1.7",
     "@hookform/resolvers": "^3.1.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/react-beautiful-dnd": "^13.1.4",
     "axios": "^1.4.0",
     "daisyui": "^2.51.6",
     "emoji-picker-react": "^4.4.9",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-multi-date-picker": "^4.0.0",
