--- a/TaskManager/package.json
+++ b/TaskManager/package.json
@@ -22,6 +22,9 @@
     "axios": "^1.4.0",
     "daisyui": "^2.51.6",
     "emoji-picker-react": "^4.4.9",
+    "fullcalendar": "^6.1.8",
+    "moment": "^2.29.4",
+    "moment-jalaali": "^0.10.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-hook-form": "^7.43.9",
