--- a/TaskManager/package.json
+++ b/TaskManager/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.4.0",
     "emoji-picker-react": "^4.4.9",
     "fullcalendar": "^6.1.8",
+    "jalaali-js": "^1.2.6",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-hook-form": "^7.43.9",
